--- a/styles/main.css
+++ b/styles/main.css
@@ -57,3 +57,9 @@ textarea {
   font-size: 1.6rem;
   color: var(--color-text-base);
 }
+
+@media (min-width 700px){
+  :root{
+    font-size: 62.5%; /* todo 1rem vai ser relativo a 10px */
+  }
+}
