--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -218,9 +218,9 @@
     height: 340px;
   }
 
-  .page-header{
-    max-width: 1100px
-  };
+  .page-header .top-bar-container{
+    max-width: 1100px;
+  }
 
   .page-header .header-content{
     max-width: 740px;
@@ -232,7 +232,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    bottom: -28px;
   }
 
   .page-header .header-content strong {
@@ -249,6 +248,7 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
     position: absolute;
+    bottom: -28px;
   }
 
   #page-study main{
